<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PlayActivity">

    <ImageView
        android:layout_width="@dimen/imagem_tamanho"
        android:layout_height="150dp"
        android:id="@+id/album_image"
        android:src="@drawable/ic_play_foreground"
        android:layout_gravity="center"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/playing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="@dimen/seek_bar_tamanho"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padrao_margem" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padrao_margem">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/button_back" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/button_pause"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/button_play"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button_next"/>

    </LinearLayout>

</LinearLayout>
